--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-auth": "^4.23.1",
     "preline": "^1.9.0",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "latest",
